Fixed edge case where lines with many symbols would no break into new lines and would overflow instead

--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,8 @@
     @apply bg-background text-foreground;
   }
 }
+/* Needed for custom line break. Fixes breaking up segments of symbols */
+.break-anywhere {
+  overflow-wrap: anywhere;
+  word-break: break-word;
+}
